packages/dmn-editor/src/DmnEditor.css
/* ... */
.kie-dmn-editor--decision-service-node .button-inactive {
  pointer-events: none !important;
  opacity: 0.4;
}
.react-flow__node-node_decisionService.selected .kie-dmn-editor--decision-service-expanded-button {
  border-color: #006ba4 !important;
}
.kie-dmn-editor--decision-service-node .kie-dmn-editor--decision-service-expanded-button {
  border: 3px;
  border-style: solid;
  border-color: black;
  font-weight: bold;
  position: absolute;
  width: 24px;
  height: 25px;
  font-size: 24px;
  text-align: center;
  bottom: 4px;
  line-height: 21px;
  pointer-events: all;
}
.react-flow__node-node_decisionService .kie-dmn-editor--node-shape .kie-dmn-editor--decision-service-label {
  font-family: system-ui;
  font-size: 0.6em;
  letter-spacing: 8px;
  fill: #a9a9a9;
}
/* (end) decisionService and group nodes */

/* (begin) external nodes */
.kie-dmn-editor--node-external {
  text-decoration: underline;
}
/* (end) external node */

/* (begin) alternative input node */
.kie-dmn-editor--selected-alternative-input-data-node:before {
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
  border-radius: 6px;
  top: -10px;
  left: -10px;
  width: calc(100% + 20px);
  height: var(--selected-alternative-input-data-node-shape--height);
  backdrop-filter: blur(8px);
}
.kie-dmn-editor--selected-alternative-input-data-node:before {
  border: 1px dashed #006ba4;
  background-color: rgb(161 222 255 / 20%); /* Very slightly blue hue */
}
/* (end) alternative input node */

/* (begin) textAnnotation, and unknown nodes */
.react-flow__node-node_unknown.selected:before,
.react-flow__node-node_textAnnotation.selected:before {
  content: "";
  display: block;
  position: absolute;
  pointer-events: none;
  border-radius: 6px;
  top: -10px;
  left: -10px;
  width: calc(100% + 20px);
  height: calc(100% + 20px);
  backdrop-filter: blur(8px);
}
.react-flow__node-node_textAnnotation.selected:before {
  border: 1px dashed #006ba4;
  background-color: rgb(161 222 255 / 20%); /* Very slightly blue hue */
}
.react-flow__node-node_unknown.selected:before {
  border: 1px dashed #a40000;
  background-color: rgb(255 161 161 / 20%); /* Very slightly red hue */
}
/* (end) textAnnotation, and unknown nodes */

/* (begin) palette */
.kie-dmn-editor--drd-selector-popover .pf-v5-c-popover__body {
  padding: 0;
}
.kie-dmn-editor--drd-selector {
  padding: 3px 8px 3px 16px;
  border-radius: 999999px;
  background: white;
  border: 1px solid black;
  display: flex;
  align-items: center;
}
.kie-dmn-editor--drd-selector input {
  overflow: hidden;
  text-wrap: nowrap;
  text-overflow: ellipsis;
  max-width: 300px;
  min-width: 50px;
}
.kie-dmn-editor--drd-selector:hover {
  box-shadow: 4px 4px 2px 0px rgb(127 127 127);
  filter: brightness(95%);
}
.kie-dmn-editor--drd-selector button {
  border: 0;
  padding: 4px 16px;
  border-radius: 8px;
  background: white;
}
.kie-dmn-editor--drd-selector button:hover {
  filter: brightness(95%);
}
.kie-dmn-editor--drd-selector button:active {
  filter: brightness(90%);
}
.kie-dmn-editor--drd-list button {
  padding: 8px 16px;
  margin: 4px 0;
  margin-right: 16px;
  border-radius: 12px;
  text-align: left;
  background: white;
  border-radius: 8px;
  border: 0;
  max-width: 300px;
  width: 100%;
  overflow: hidden;
  text-wrap: nowrap;
  text-overflow: ellipsis;
}
.kie-dmn-editor--drd-list button.active {
  color: #0067cc;
  filter: brightness(95%);
}
.kie-dmn-editor--drd-list button:active {
  filter: brightness(90%);
}
.kie-dmn-editor--drd-properties--input-data-node-shape button {
  height: 36px;
}

.kie-dmn-editor--palette {
  width: 42px;
  background: #fff;
  border-radius: 40px;
  border: 1px solid black;
}
.kie-dmn-editor--palette:hover {
  box-shadow: 4px 4px 2px 0px rgb(127 127 127);
}

.kie-dmn-editor--palette.pulse {
  animation: pulse 3s infinite;
}

@keyframes pulse {
  0% {
    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.3);
  }

  70% {
    box-shadow: 0 0 20px 20px rgba(0, 0, 0, 0);
  }

  100% {
    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0);
  }
}

.kie-dmn-editor--palette-button {
  margin: 0;
  margin-bottom: 8px;
  padding: 0;
  width: 40px;
  height: 40px;
  max-width: 40px;
  border-radius: 40px;
  border: 0;
  background: white;
}
.kie-dmn-editor--palette-button:hover {
  filter: brightness(95%);
  cursor: grab;
}
.kie-dmn-editor--palette-button:active {
  filter: brightness(90%);
  cursor: grabbing;
}
/* (end) palette */

/* (begin) properties panel toggle */

.kie-dmn-editor--properties-panel-toggle {
  width: 42px;
  background: #fff;
  border-radius: 40px;
  border: 1px solid black;
}
.kie-dmn-editor--properties-panel-toggle:hover {
  box-shadow: -4px 4px 2px 0px rgb(127 127 127);
}
.kie-dmn-editor--properties-panel-toggle-button {
  margin: 0;
  width: 40px;
  height: 40px;
  max-width: 40px;
  border-radius: 40px;
  border: 0;
  background: white;
}
.kie-dmn-editor--properties-panel-toggle-button:hover {
  filter: brightness(95%);
}
.kie-dmn-editor--properties-panel-toggle-button:active {
  filter: brightness(90%);
}
/* (end) properties panel toggle */

/* (begin) version popover */
.kie-dmn-editor--version-popover .pf-v5-c-popover__body {
  padding: 0;
}
/* (end) version popover */

/* (begin) autolayout panel toggle */
.kie-dmn-editor--autolayout-panel-toggle {
  width: 42px;
  background: #fff;
  border-radius: 40px;
  border: 1px solid black;
}
.kie-dmn-editor--autolayout-panel-toggle:not(:last-child) {
  margin-right: 16px;
}

.kie-dmn-editor--autolayout-panel-toggle:hover {
  box-shadow: -4px 4px 2px 0px rgb(127 127 127);
}
.kie-dmn-editor--autolayout-panel-toggle-button {
  margin: 0;
  width: 40px;
  height: 40px;
  max-width: 40px;
  border-radius: 40px;
  border: 0;
  background: white;
}
.kie-dmn-editor--autolayout-panel-toggle-button:hover {
  filter: brightness(95%);
}
.kie-dmn-editor--autolayout-panel-toggle-button:active {
  filter: brightness(90%);
}
/* ... */

